--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 
 <div [ngSwitch]="componentToShow">
     <app-home *ngSwitchCase="1"></app-home>
-    <app-gamelist *ngSwitchCase="2"></app-gamelist>
-    <app-editgame *ngSwitchCase="3"></app-editgame>
-    <app-gamedetail *ngSwitchCase="4"></app-gamedetail>
+    <app-game-list *ngSwitchCase="2"></app-game-list>
+    <app-edit-game *ngSwitchCase="3"></app-edit-game>
+    <app-game-detail *ngSwitchCase="4"></app-game-detail>
 </div>
