Lista nel service e metodo per dettaglio gioco

--- a/src/app/components/game-list/game-list.component.html
+++ b/src/app/components/game-list/game-list.component.html
@@ -1,4 +1,4 @@
-<div *ngFor="let lista of gameList">
+<ul *ngFor="let lista of gameList">
     {{lista.nome}}, {{lista.descrizione}}
 
-</div>
+</ul>
