Pagina di dettaglio

--- a/src/app/components/game-detail/game-detail.component.html
+++ b/src/app/components/game-detail/game-detail.component.html
@@ -1,1 +1,6 @@
-<p>game-detail works!</p>
+<p>Nome: {{game?.nome}}</p>
+<p>Descrizione: {{game?.descrizione}}</p>
+<p>Genere: {{game?.genere}}</p>
+<p>Rating: {{game?.rating}}</p>
+<p>Prezzo: {{game?.prezzo}}</p>
+<p>Anno Uscita: {{game?.annoUscita}}</p>
