Aggiunta gioco e sistemazione layout

--- a/src/app/components/game-detail/game-detail.component.html
+++ b/src/app/components/game-detail/game-detail.component.html
@@ -3,4 +3,4 @@
 <p>Genere: {{game?.genere}}</p>
 <p>Rating: {{game?.rating}}</p>
 <p>Prezzo: {{game?.prezzo}}</p>
-<p>Anno Uscita: {{game?.annoUscita}}</p>
+<p>Anno Uscita: {{game?.annoUscita | date:'longDate' | uppercase}}</p>
