--- a/src/app/components/game-list/game-list.component.html
+++ b/src/app/components/game-list/game-list.component.html
@@ -1,3 +1,3 @@
 <ul *ngFor="let lista of gameList">
-    <li>{{lista.nome}} <button (click)="showDetail(lista.id)">Dettaglio</button> </li>
+    <li (click)="showDetail(lista.id)">{{lista.nome}}</li>
 </ul>
