--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
-<app-menu (selectMenuItem)="componentToShow = $event"></app-menu>
+<app-menu></app-menu>
+<router-outlet></router-outlet>
 
-<div [ngSwitch]="componentToShow">
+<!-- <div [ngSwitch]="componentToShow">
     <app-home *ngSwitchCase="1"></app-home>
     <app-game-list *ngSwitchCase="2" (showDetail)="showDetailPage($event)"></app-game-list>
     <app-edit-game *ngSwitchCase="3"></app-edit-game>
     <app-game-detail *ngSwitchCase="4" [gameId]="gameIdForDetail"></app-game-detail>
-</div>
+</div> -->
