--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,3 +1,3 @@
 <ul>
-    <li><button *ngFor="let menuItem of menuList" (click)="selectedComponent(menuItem.id)">{{menuItem.description}}</button></li>
+    <li><button *ngFor="let menuItem of menuList" routerLink='{{menuItem.url}}'>{{menuItem.description}}</button></li>
 </ul>
