--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,3 +1,4 @@
 <ul *ngIf="currentRoute!='/login'">
     <li><button *ngFor="let menuItem of menuList" routerLink='{{menuItem.url}}'>{{menuItem.description}}</button></li>
+    <button (click)="logout()">Logout</button>
 </ul>
