aggiunta autenticazione sugli utenti

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -6,4 +6,8 @@
     <label for="pwd">Password</label>
     <input type="password" placeholder="password" id="pwd" [(ngModel)]="password">
 </div>
+<div>
+    <label for="ruolo">Ruolo</label>
+    <input type="text" placeholder="password" id="ruolo" [(ngModel)]="ruolo">
+</div>
 <button (click)="login()">Login</button>
