Login con reactive-form

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<div>
+<!-- <div>
     <label for="usr">Username</label>
     <input type="text" placeholder="username" id="usr" [(ngModel)]="username">
 </div>
@@ -10,4 +10,29 @@
     <label for="ruolo">Ruolo</label>
     <input type="text" placeholder="password" id="ruolo" [(ngModel)]="ruolo">
 </div>
-<button (click)="login()">Login</button>
+<button (click)="login()">Login</button> -->
+
+<form [formGroup]="loginForm" (ngSubmit)="login()">
+
+    <div>
+        <label for="username">Username</label>
+        <input type="text" id="username" formControlName="username">
+        <!-- <p *ngIf="usernameControl.status === 'INVALID' && usernameControl.dirty">Campo nome obbligatorio!</p> -->
+
+    </div>
+
+    <div>
+        <label for="password">Password</label>
+        <input type="password" id="password" formControlName="password">
+        <!-- <p *ngIf="passwordControl.status === 'INVALID' && passwordControl.dirty">Campo nome obbligatorio!</p> -->
+    </div>
+
+    <div>
+        <label for="ruolo">Ruolo</label>
+        <select id="ruolo" formControlName="ruolo">
+            <option *ngFor="let ruolo of rules" [value]="ruolo">{{ruolo}}</option>
+        </select>
+    </div>
+
+    <button type="submit">Submit</button>
+</form>
