--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,14 +1,9 @@
 <ul *ngIf="currentRoute!='/login'">
     <div>Benvenuto {{user}}</div>
     <ng-container *ngFor="let menuItem of menuList">
-        <ng-container *ngIf="showEdit(); else notAdmin">
+        <ng-container *ngIf="isAdmin() || menuItem.id!=3">
             <button routerLink='{{menuItem.url}}'>{{menuItem.description}}</button>
         </ng-container>
-        <ng-template #notAdmin>
-            <ng-container *ngIf="menuItem.id!=3">
-                <button routerLink='{{menuItem.url}}'>{{menuItem.description}}</button>
-            </ng-container>
-        </ng-template>
     </ng-container>
     <button (click)="logout()">Logout</button>
 </ul>
