creazione form registrazione

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -21,3 +21,4 @@
 
     <button type="submit" [disabled]="loginForm.status === 'INVALID'">Submit</button>
 </form>
+<a href="/register">Se non sei registrato clicca qui</a>
