--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,4 +1,4 @@
-<ul *ngIf="currentRoute!='/login'">
+<ul *ngIf="currentRoute!='/login'&&currentRoute!='/register'">
     <div>Benvenuto {{user}}</div>
     <ng-container *ngFor="let menuItem of menuList">
         <ng-container *ngIf="isAdmin() || menuItem.id!=3">
